fixed new GameOne TV distribution method